Agregado div -contenedor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Git VScode</title>
 </head>
 <body>
+    <!-- curso de git div-contenedor -->
+    <div class="container">
+        <div class="row">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas, aliquid!</p>
+        </div>
+    </div>
     
 </body>
 </html>
