--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git VScode</title>
 </head>
 <body>
-    <!-- curso de git div-contenedor -->
+    <!-- curso de git div-contenedor 2-->
     <div class="container">
         <div class="row">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas, aliquid!</p>
